# off-grid

./: .gitattributes  .gitignore  README.md  api.Dockerfile  app.Dockerfile  docker-compose.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
data/: ath.tif  avi-10.tif  avi.tif  cat-10.tif  cat.tif  ch.swisstopo.swissalti3d-D1J83rm7.csv  color_palette.vrt  mesh.vtk  mesh_centroids.vtk  path.vtk  terrain.tif
data/tiles/: swissalti3d_2019_2735-1197_0.5_2056_5728.tif  swissalti3d_2019_2735-1198_0.5_2056_5728.tif  swissalti3d_2020_2736-1198_0.5_2056_5728.tif  swissalti3d_2023_2735-1191_0.5_2056_5728.tif  swissalti3d_2023_2735-1192_0.5_2056_5728.tif  swissalti3d_2023_2735-1193_0.5_2056_5728.tif  swissalti3d_2023_2735-1194_0.5_2056_5728.tif  swissalti3d_2023_2735-1195_0.5_2056_5728.tif  swissalti3d_2023_2735-1196_0.5_2056_5728.tif  swissalti3d_2023_2736-1191_0.5_2056_5728.tif  swissalti3d_2023_2736-1192_0.5_2056_5728.tif  swissalti3d_2023_2736-1193_0.5_2056_5728.tif  swissalti3d_2023_2736-1194_0.5_2056_5728.tif  swissalti3d_2023_2736-1195_0.5_2056_5728.tif  swissalti3d_2023_2736-1196_0.5_2056_5728.tif  swissalti3d_2023_2736-1197_0.5_2056_5728.tif  swissalti3d_2023_2737-1191_0.5_2056_5728.tif  swissalti3d_2023_2737-1192_0.5_2056_5728.tif  swissalti3d_2023_2737-1193_0.5_2056_5728.tif  swissalti3d_2023_2737-1194_0.5_2056_5728.tif  swissalti3d_2023_2737-1195_0.5_2056_5728.tif  swissalti3d_2023_2737-1196_0.5_2056_5728.tif  swissalti3d_2023_2737-1197_0.5_2056_5728.tif  swissalti3d_2023_2737-1198_0.5_2056_5728.tif  (+16 more)
scripts/: convert_cat.py  convert_cat.sh  download_cat.sh  download_data.py  download_slf_layers.py  make_mesh.py  merge_data.py  resample_tif.py
src/app/: globals.css  (+2 more)
(+12 files in other folders)
